@@ -777,6 +777,30 @@ being relative to your WWW servers I<DOCUMENT_ROOT> directory.
 
 This directive terminates processing of the current HTML page.
 
+=item ep-set
+
+This instruction is setting an EP variable. Suggest the following
+example:
+
+  <ep-set var=myvar val=value>
+
+From now on you can use
+
+  $myvar$
+
+as an alias for "value". There's also a multiline version:
+
+  <ep-set var=myvar>value</ep-set>
+
+The main difference between the single and the multiline version is that
+the multiline version allows supressing variable interpretation by setting
+the I<noparse> attribute:
+
+  <ep-set var=myvar noparse=1>my $value$</ep-set>
+
+The above example is indeed setting myvar to "my $value$" *without*
+escaping $value$!
+
 =back
 
 
