@@ -1,3 +1,7 @@
+1999-12-05  Jochen Wiedmann  <joe@ispsoft.de> (0.2008)
+
+	* lib/HTML/EP.pm (_ep_set): Added "noparse" attribute.
+
 1999-11-25  Jochen Wiedmann  <joe@ispsoft.de>
 
 	* Added lib/HTML/EP/CGIEncryptForm.pm, contributed by
